# Navecraft

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NOTICE.md  Navecraft.spec  README.md  SECURITY.md  TODO.md  main.py  pyproject.toml  requirements.txt  settings.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
core/: audio.py  game.py  input.py  renderer.py
docs/: MANUAL.md  MODDING.md
docs/superpowers/specs/: 2026-05-12-todo-v1.2-pragmatic-completion-design.md
entities/: enemy.py  merchant.py  spaceship.py
mods/: README.md
scripts/: release.py
systems/: accessibility.py  achievements.py  background.py  bosses.py  camera.py  codex.py  day_night.py  factions.py  feedback.py  galaxy.py  game_modes.py  gamepad.py  generation.py  inventory.py  leaderboard.py  lighting.py  missions.py  mod_loader.py  multiplayer.py  particles.py  photo_mode.py  physics.py  planet_names.py  pool.py  profiler.py  rebind.py  replay.py  save_system.py  skills.py  spatial_hash.py  speedrun.py  stations.py  stats.py  telemetry.py  tutorial.py  upgrades.py  weather.py
tests/: test_fixes.py  test_inventory_property.py  test_module_integration.py  test_new_systems.py  test_phase0_bugs.py  test_release_and_updater.py  test_save_fuzz.py  test_smoke_render.py  test_stress_and_perf.py  test_ui_coverage.py  test_v13_features.py
ui/: codex_screen.py  compass.py  crafting_screen.py  death_screen.py  help_overlay.py  hud.py  inventory_screen.py  map_screen.py  menu.py  minimap.py  settings_screen.py  tooltip.py
utils/: auto_updater.py  colors.py  config.py  debug.py  display.py  font.py  i18n.py  logger.py
