[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "navecraft"
version = "1.1.0"
description = "Procedurally-generated 2D space survival game"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Navecraft Contributors" },
]
dependencies = [
    "pygame>=2.5.0",
    "numpy>=1.24.0",
    "noise>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
]

[project.scripts]
navecraft = "main:main"
