[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "navecraft"
version = "1.1.0"
description = "Procedurally-generated 2D space survival game"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Navecraft Contributors" },
]
dependencies = [
    "pygame>=2.5.0",
    "numpy>=1.24.0",
    "noise>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "coverage>=7.0",
    "ruff>=0.4",
]

[project.scripts]
navecraft = "main:main"

[tool.coverage.run]
branch = true
source = ["core", "systems", "ui", "utils", "entities"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "build/*",
    "dist/*",
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "raise NotImplementedError",
    "def __repr__",
]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line too long — handled by line-length above
    "E741",  # ambiguous variable name — used in math contexts
    "F403",  # `from settings import *`
    "F405",  # may be undefined or defined from star imports
]
